# qtaim_generator

./: .gitignore  CITATION.bib  CITATION.cff  CLAUDE.md  LICENSE  README.md  README_omol.md  bond_agreement_local.sh  environment.yml  noise_floors_corpus.flux  noise_floors_corpus.sh  pyproject.toml  settings.ini  setup.py
.github/: copilot-instructions.md
docs/: ORCA_JSON_SCHEMA.md  WANDB_INTEGRATION.md
docs/neurips/: build.sh  checklist.tex  main.tex  neurips_2026.sty  neurips_2026_instructions.tex
docs/neurips/bib/: refs.bib
docs/neurips/sections/: 01_introduction.tex  02_related_work.tex  03_dataset.tex  04_pipeline.tex  05_coverage.tex  06_noise_analysis.tex  07_census.tex  08_evaluation.tex  09_limitations.tex  10_conclusion.tex  appendix.tex  literature_brief_v7.md
docs/plans/: 2026-02-24-feat-wfx-format-support-plan.md  2026-03-10-feat-qtaim-embed-pyg-migration-plan.md  2026-03-25-feat-multi-vertical-converter-merge-pipeline-plan.md  2026-03-27-fix-multiwfn-parser-edge-cases-plan.md  2026-04-01-fix-restart-granularity-stale-lock-protection-plan.md  2026-04-01-fix-timings-json-path-mismatch-plan.md  2026-04-28-paper-outline.md  2026-05-03-analysis-implementation-plan.md  2026-05-03-analysis-implementation-plan_F_noise_floors.md  2026-05-04-soap-featurization-plan.md
docs/solutions/performance-issues/: 2026-02-02-converter-parallelization-and-completion.md
env/: enviro.yml
examples/: run_sharded_converter.py  test_all_converters.py  test_fuzzy_debug.py  wandb_example.py
notebooks/: fit_umap_pca_full.py  soap_umap_plotting.ipynb
notebooks/analysis/: 05_noise_floors.ipynb  render_umap_omol_vs_tmqmplus.py
qtaim_gen/: __init__.py  _pymatgen_compat.py
qtaim_gen.egg-info/: PKG-INFO
qtaim_gen/notebooks/: construct_datasets.ipynb  critic2_dev.ipynb  data_munge.ipynb  merge_qtaim_labels.ipynb  parse_radqm9.ipynb  plots.ipynb  validation_omol.ipynb
qtaim_gen/source/: __init__.py  settings.ini
qtaim_gen/source/analysis/: __init__.py  bond_agreement.py  build_holdout_csvs.py  census.py  charge_alignment.py  dipole_alignment.py  noise_floors.py  streaming_aggregator.py
qtaim_gen/source/core/: bonds.py  controller.py  converter.py  critic2_parser.py  embed.py  io.py  lmdb_analysis.py  lmdb_plots.py  lmdbs.py  omol.py  parse_critic.py  parse_critic2.py  parse_json.py  parse_multiwfn.py  parse_orca.py  parse_qtaim.py  qtaim_embed.py  utils.py  validation.py  workflow.py
qtaim_gen/source/data/: multiwfn.py  settings.ini
qtaim_gen/source/quacc/: __init__.py  runner.py  test.py
qtaim_gen/source/scripts/: __init__.py  analysis_bond_agreement.py  analysis_census.py  analysis_charge_alignment.py  analysis_dipole_alignment.py  analysis_noise_floors.py  count_generator_zips.py  create_files.py  create_files_json.py  create_files_omol.py  data.txt  example_base_omol.py  full_runner.py  full_runner_parsl.py  full_runner_parsl_alcf.py  full_runner_parsl_nersc.py  full_runner_quacc_parsl.py  (+16 more)
qtaim_gen/tutorials/: 1_first_calc.ipynb  3_postprocessing_and_ml.ipynb
scripts/: noise_floors_corpus.flux  run_soap_featurization.sh
source/: CPprop_1157_1118_1158.txt  check_res.py  controller.py  controller_hydro.py  create_files.py  data_munge.ipynb  helper.py  parse_data.py
tests/: conftest.py  test_analysis_bond_agreement.py  test_analysis_census.py  test_analysis_charge_alignment.py  test_analysis_dipole_alignment.py  test_analysis_noise_floors.py  test_analysis_streaming_aggregator.py  test_bond_detection.py  test_collect.py  test_combined_lmdb_suite.py  test_connect_db_meta.py  test_converter_molwrapper_integration.py  test_converter_molwrapper_integration_README.md  test_embed_training_integration.py  test_empty_bonds_validation.py  test_fix_feature_size_metadata.py  test_general_converter_filters.py  test_impute.py  test_json_to_lmdb_sharding.py  test_key_normalization.py  test_lmdb.py  test_lmdb_analysis.py  test_lmdb_audit.py  test_lmdb_embed_format.py  test_lmdb_indexing.py  test_manifest.py  test_merge_zip_into.py  test_ml.py  test_multi_vertical.py  test_parse.py  test_parse_json.py  test_parse_multiwfn.py  test_parse_orca.py  test_restart_data_crossref.py  test_restart_existing_keys.py  test_restart_partial_folders.py  test_scale_graphs.py  test_scaler_merge.py  test_serialize_roundtrip.py  test_sharded_converter.py  (+5 more)
tests/archived_tests/: README.md  test_key_normalization.py  test_lmdb.py  test_lmdb_indexing.py  test_restart_existing_keys.py
tests/test_files/: CPprop.txt  CPprop_bond_map.txt  CPprop_w_bond_paths.txt  input.in  input_bond_map.in  input_bond_paths.in  test_atom_cp.txt  test_bond_cp.txt  test_dft.in  test_prop_full.txt  test_ring_cp.txt
(+236 files in other folders)
