[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtaim_generator"
version = "0.0.0"
description = "QTAIM generator and utilities"
readme = "README.md"
requires-python = ">=3.9"
authors = [ { name = "Santiago Vargas" } ]

# Dependencies
# Note: RDKit is best installed from conda (conda-forge) for full functionality and C++ dependencies.
# If you prefer pip, there is a PyPI package `rdkit-pypi` but it may be limited compared to the conda build.
dependencies = []
# optional dependencies for parsl 
[project.optional-dependencies]
parsl = ["parsl[monitoring]>=2024.5.27; platform_system!='Windows'"]
wandb = ["wandb>=0.15.0"]
dev = ["pytest>=7.4.0", "pytest-cov>=7.0.0", "ruff>=0.0.285", "pytest-asyncio>=0.26.0"]


[tool.setuptools]
# Auto-discover packages in the repository
packages = { find = {} }

[project.scripts]
# QTAIM - only
create-files = "qtaim_gen.source.scripts.create_files:main"
# QTAIM - only
parse-data = "qtaim_gen.source.scripts.parse_data:main"
# QTAIM - only
run-qtaim-gen = "qtaim_gen.source.scripts.run:main"
# QTAIM - only
clean-failed-files = "qtaim_gen.source.scripts.helpers.clean_failed_files:main"
# Full analysis 
full-runner = "qtaim_gen.source.scripts.full_runner:main"
full-runner-parsl = "qtaim_gen.source.scripts.full_runner_parsl:main"
full-runner-parsl-alcf = "qtaim_gen.source.scripts.full_runner_parsl_alcf:main"
full-runner-parsl-nersc = "qtaim_gen.source.scripts.full_runner_parsl_nersc:main"

generator-single-runner = "qtaim_gen.source.scripts.generator_run:main"

check-res-wfn = "qtaim_gen.source.scripts.helpers.check_res_wfn:main"
check-res-rxn-json = "qtaim_gen.source.scripts.helpers.check_res_rxn_json:main"
folder-xyz-molecules-to-pkl = "qtaim_gen.source.scripts.helpers.folder_xyz_molecules_to_pkl:main"
outcar-seek-and-convert-xyz = "qtaim_gen.source.scripts.helpers.outcar_seek_and_convert_xyz:main"
folder-orca-inp-to-pkl = "qtaim_gen.source.scripts.helpers.folder_orca_inp_to_pkl:main"

# Optional: add project URLs
[project.urls]
"Homepage" = "https://github.com/santi921/qtaim_generator"
"Bug Tracker" = "https://github.com/santi921/qtaim_generator/issues"

# Conda environment specification (informational). Use `environment.yml` to
# create the recommended conda environment with RDKit from conda-forge.
[tool.conda]
# Channels to use when creating the environment
channels = ["conda-forge", "defaults"]

# Conda dependencies; prefer installing RDKit from conda-forge
dependencies = [
    "python=3.9",
    "rdkit",
    "pymatgen>=2024.0.0",
    "lmdb>=1.4.0"
]
